Closed Bug 326013 Opened 20 years ago Closed 20 years ago

profile name not used

Categories

(Core Graveyard :: Embedding: GTK Widget, defect, P2)

x86
Linux
defect

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: chpe, Assigned: benjamin)

Details

(Whiteboard: [has patch])

Attachments

(1 file)

EmbedPrivate::SetProfilePath(const char *aDir, const char *aName) nsresult rv = NS_NewNativeLocalFile(nsDependentCString(aDir), PR_TRUE, &sProfileDir); This needs to sProfileDir->Append(nsDependentCString(aName)), I guess.
We don't need profile names any more, so we (correctly) ignore the name parameter.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → INVALID
You may not "need" them anymore technically, but it's still needed for backward compatibility with existing profiles.
Why? I'm confused... as long as the path is correct, what do we need the name for?
API compatibility. Otherwise implementors have to #if HAVE_GECKO_1_9 gtk_moz_embed_set_profile_path("/path/to/profile/name", NULL); #else gtk_moz_embed_set_profile_path("/path/to/profile", "name"); #endif which they may not know, and wonder why it doesn't work. I know I was puzzled why my profile didn't load.
Wow, you mean the dir passed in was the parent dir? Is there any salting involved (asdfvbjk.slt subdirectories or whatnot)?
Status: RESOLVED → REOPENED
Resolution: INVALID → ---
Yes, it's the parent directory. So passing ("/path","name") created the profile directory "/path/name/". Existing gtkmozembed profiles are unsalted, bug 296436.
Assignee: mpgritti → benjamin
Status: REOPENED → ASSIGNED
Attachment #210880 - Flags: review?(chpe)
Priority: -- → P2
Whiteboard: [has patch]
Target Milestone: --- → mozilla1.9alpha
Attachment #210880 - Flags: review?(chpe) → review+
Fixed on trunk.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago20 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: