Bug 326013 - profile name not used (gtkmozembed API compatibility), r=chpe